--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -27,9 +27,49 @@
     <EditText
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:hint="@string/signup_first_name"
+        android:hint="@string/signup_last_name"
         android:layout_below="@id/tvSignup"
         android:id="@+id/etLastName"
         android:layout_toRightOf="@id/etFirstName"/>
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:inputType="textEmailAddress"
+        android:hint="@string/signup_email"
+        android:layout_below="@id/etFirstName"
+        android:id="@+id/etEmail"
+        />
+
+    <EditText
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:hint="@string/signup_password"
+        android:layout_below="@id/etEmail"
+        android:id="@+id/etPassword"
+        android:inputType="textPassword"/>
+
+
+    <EditText
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:hint="@string/signup_confirm"
+        android:layout_below="@id/etEmail"
+        android:id="@+id/etConfirm"
+        android:layout_toRightOf="@id/etPassword"
+        android:inputType="textPassword"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:text="@string/signup_signup_button"
+        android:id="@+id/btnRegister"
+        android:layout_below="@id/etPassword"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:text="@string/signup_login"
+        android:id="@+id/btnLogin"
+        android:layout_below="@id/btnRegister"/>
 </RelativeLayout>
